<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/login"
        style="@style/TitleTextViewStyle"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tvHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        style="@style/BodyTextViewStyle"
        android:layout_marginTop="30dp"
        android:paddingHorizontal="30dp"
        android:text="@string/country_confirm"
        android:textSize="17sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin" />


    <LinearLayout
        android:id="@+id/phoneContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tvHint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:ccp_countryPreference="BD"
            app:ccp_defaultNameCode="BD"
            app:ccp_contentColor="@color/accent"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/BrilliantTextInput"
            android:layout_width="250dp"
            android:hint="@string/phone_number"
            android:layout_height="wrap_content"
            android:textColorHint="@color/textPrimary"
            app:hintTextColor="@color/underline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:boxStrokeColor="@color/box_text_outline"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText"
                android:inputType="phone"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/textPrimary"
                android:textColorHint="@color/textPrimary"
                android:textCursorDrawable="@drawable/default_cursor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/tvTerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        style="@style/LightTextViewStyle"
        android:layout_marginTop="40dp"
        android:paddingHorizontal="30dp"
        android:text="@string/login_terms"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneContainer" />

    <Button
        android:id="@+id/btnContinue"
        style="@style/HindButtonStyle"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/continue_button"
        android:background="@drawable/button_rounded_corners"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTerms" />

</androidx.constraintlayout.widget.ConstraintLayout>