<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/textOrange"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/bell"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/dialog_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:text="@string/allow_push"
        android:layout_marginTop="10dp"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_text"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
       >

        <Button
            android:id="@+id/button_positive"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/allow"
            android:textColor="@color/textPrimary"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Space
            android:id="@+id/space"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            app:layout_constraintStart_toEndOf="@+id/button_positive"
            />

        <Button
            android:id="@+id/button_negative"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/dont_allow"
            android:textAllCaps="false"
            android:textColor="@color/textPrimary"
            app:layout_constraintStart_toEndOf="@+id/space"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</RelativeLayout>
